clean audit in .view and .models.characteristics package project works fine xwen2