@@ -33,13 +33,12 @@ import edu.wpi.cs.wpisuitetng.modules.requirementmanager.models.RequirementModel
 
 /**
  * This is the panel on the open session table.
- * 
  * @author Team Romulus
- * @contributOr 
+ * @version Iteration-3
  */
 @SuppressWarnings("serial")
 public class SessionRequirementPanel extends JPanel {
-	PlanningPokerSession displaySession;
+    PlanningPokerSession displaySession;
 
     /*
      * Rows in the table
@@ -52,40 +51,44 @@ public class SessionRequirementPanel extends JPanel {
 
     /**
      * Sets up directory table of requirements in system
+     * @param parent SessionPanel
+     * @param viewMode ViewMode
+     * @param displaySession PlanningPokerSession
      */
     public SessionRequirementPanel(SessionPanel parent, ViewMode viewMode,
                     PlanningPokerSession displaySession) {
-    	this.displaySession = displaySession;
-        Object[][] data = {};
-        String[] columns = { "ID", "NAME", "" };
+        this.displaySession = displaySession;
+        final Object[][] data = {};
+        final String[] columns = { "ID", "NAME", "" };
 
-        List<Requirement> importedRequirements = RequirementModel.getInstance().getRequirements();
+        final List<Requirement> importedRequirements =
+                        RequirementModel.getInstance().getRequirements();
 
         System.out.print(importedRequirements.size());
 
         model = new DefaultTableModel(data, columns) {
-        	@Override
-        	public boolean isCellEditable(int row, int column) {
-        		return column == 2;
-        	}
+            @Override
+            public boolean isCellEditable(int row, int column) {
+                return column == 2;
+            }
         };
 
         for (int i = 0; i < importedRequirements.size(); i++) {
             Requirement req = importedRequirements.get(i);
-            //String currEst = String.valueOf(req.getEstimate());
             String iteration = req.getIteration().toString();
-            
+
             if (iteration.equals("Backlog")) {
 
-            	model.addRow(new Object[] { req.getId(), req.getName(), false });
-            
-            requirements.add(new RequirementEstimate(req.getId(), req.getName(), 0, false));
+                model.addRow(new Object[] { req.getId(), req.getName(), false });
+
+                requirements.add(new RequirementEstimate(req.getId(), req.getName(), 0, false));
             }
         }
 
         table = new JTable(model) {
             @Override
-            public Class<?> getColumnClass(int column) {
+            public Class<?> getColumnClass(int column) { // $codepro.audit.disable multipleReturns
+                //in this case multiple returns makes code much easier to understand
                 switch (column) {
                     case 0:
                         return Integer.class;
@@ -97,7 +100,7 @@ public class SessionRequirementPanel extends JPanel {
             }
         };
 
-        JScrollPane tablePanel = new JScrollPane(table); 
+        final JScrollPane tablePanel = new JScrollPane(table); 
         tablePanel.setPreferredSize(new Dimension(1000, 800));
 
         table.getColumnModel().getColumn(0).setMaxWidth(0);
@@ -107,76 +110,91 @@ public class SessionRequirementPanel extends JPanel {
         table.getColumnModel().getColumn(1).setMinWidth(100);
         table.getColumnModel().getColumn(2).setMinWidth(100);
         table.getColumnModel().getColumn(2).setMaxWidth(100);
-        
+
         table.getTableHeader().setReorderingAllowed(false);
-        
+
         this.setLayout(new BorderLayout());
 
-        //JPanel refreshPanel = new JPanel();
         this.add(tablePanel, BorderLayout.CENTER);
-        //this.add(refreshPanel, BorderLayout.EAST);
-        
-        TableColumn tc = table.getColumnModel().getColumn(2);
+
+
+        final TableColumn tc = table.getColumnModel().getColumn(2);
         tc.setCellEditor(table.getDefaultEditor(Boolean.class));  
         tc.setCellRenderer(table.getDefaultRenderer(Boolean.class));
         table.getTableHeader().setReorderingAllowed(false);
-        
+
         if (viewMode == ViewMode.EDIT) {
             refreshRequirementSelection();
         }
-        
-        
+
+
         boolean allChecked = true;
         for (int i = 0; i < model.getRowCount(); i++) {
             allChecked &= (boolean)model.getValueAt(i, 2);
         }
         tc.setHeaderRenderer(new CheckBoxHeader(new MyItemListener(), allChecked));
     }
-    
+
+    /**
+     * @author Team Romulus
+     */
     class MyItemListener implements ItemListener  
     {
-      public void itemStateChanged(ItemEvent e) {  
-        Object source = e.getSource();  
-        if (source instanceof AbstractButton == false) return;  
-        boolean checked = e.getStateChange() == ItemEvent.SELECTED;  
-        for(int x = 0, y = table.getRowCount(); x < y; x++)  
-        {  
-          table.setValueAt(new Boolean(checked),x,2);  
-        }  
-      }   
+        public void itemStateChanged(ItemEvent e) {  
+            final Object source = e.getSource();  
+            if (source instanceof AbstractButton){  
+                final boolean checked = e.getStateChange() == ItemEvent.SELECTED; 
+                final int  y = table.getRowCount();
+                for(int x = 0; x < y; x++)  
+                {  
+                    table.setValueAt(Boolean.valueOf(checked), x, 2);  
+                }  
+            }   
+        }
     }
 
-	public void refreshRequirementSelection() {
-		for (int i = 0; i < requirements.size(); i++) {
-			model.setValueAt(false, i, 2);
-		}
-		
-		for (RequirementEstimate displayRequirement : displaySession.getRequirements()) {
-		    boolean exists = false;
-		    for (int i = 0; i < requirements.size(); i++) {
-		        if (requirements.get(i).getId() == displayRequirement.getId() && requirements.get(i).getName().equals(displayRequirement.getName())) {
-		            exists = true;
-		            model.setValueAt(true, i, 2);
-		        }
-		    }
-		    if (!exists) {
-		        requirements.add(displayRequirement);
-		        model.addRow(new Object[] { displayRequirement.getId(), displayRequirement.getName(), true });
-		    }
-		}
-	}
+    /**
+     * Method refreshRequirementSelection.
+     */
+    public void refreshRequirementSelection() {
+        for (int i = 0; i < requirements.size(); i++) {
+            model.setValueAt(false, i, 2);
+        }
 
-	public void addListener(TableModelListener l) {
-		model.addTableModelListener(l);
-	}
-	
-    /*
+        for (RequirementEstimate displayRequirement : displaySession.getRequirements()) {
+            boolean exists = false;
+            for (int i = 0; i < requirements.size(); i++) {
+                if (requirements.get(i).getId() == displayRequirement.getId() 
+                             && requirements.get(i).getName().equals(displayRequirement.getName()))
+                {
+                    exists = true;
+                    model.setValueAt(true, i, 2);
+                }
+            }
+            if (!exists) {
+                requirements.add(displayRequirement);
+                model.addRow(new Object[] { 
+                                displayRequirement.getId(), displayRequirement.getName(), true 
+                });
+            }
+        }
+    }
+
+    /**
+     * Method addListener.
+     * @param l TableModelListener
+     */
+    public void addListener(TableModelListener l) {
+        model.addTableModelListener(l);
+    }
+
+    /**
      * Return the requirements with selected checkboxes
      * @return A List containing the selected requirements
      */
 
     public List<RequirementEstimate> getSelectedRequirements() {
-        List<RequirementEstimate> selected = new LinkedList<RequirementEstimate>();
+        final List<RequirementEstimate> selected = new LinkedList<RequirementEstimate>();
         for (int i = 0; i < requirements.size(); i++) {
             if ((Boolean) model.getValueAt(i, 2)) {
                 selected.add(requirements.get(i));
